mt fix ordered list spacing

--- a/blog/styles/styles.css
+++ b/blog/styles/styles.css
@@ -317,6 +317,19 @@ p, dl, ol, ul, pre, blockquote {
   margin-bottom: 1em;
 }
 
+main .default-content-wrapper ol {
+  padding-inline-start: 20px;
+}
+
+main .default-content-wrapper ul li,
+main .default-content-wrapper ol li {
+  margin-bottom: 16px;
+}
+
+main .default-content-wrapper ol li {
+  margin-left: 30px;
+}
+
 main .default-content-wrapper ul,
 main .tabs ul,
 main .columns ul {
@@ -324,11 +337,8 @@ main .columns ul {
   list-style-type: none;
 }
 
-main .default-content-wrapper ol li,
 main .default-content-wrapper ul li,
-main .tabs ol li,
 main .tabs ul li,
-main .columns ol li,
 main .columns ul li {
   position: relative;
   margin-bottom: 16px;
